--- a/app/views/modals/_group_user_sign_up.html.haml
+++ b/app/views/modals/_group_user_sign_up.html.haml
@@ -8,4 +8,4 @@
     %p.popup-intro
       We need to validate your address before you can access these features.
       
-    =link_to "Next >>", "#", :class => "cta-intro"
+    =link_to "Next >>", '#', :class => "cta-intro", :"data-dismiss" => "modal"
