--- a/app/views/user_mailer/accepted_offer.text.erb
+++ b/app/views/user_mailer/accepted_offer.text.erb
@@ -8,3 +8,5 @@ Thanks,
 
 The <%=Settings.site_name%> team
 <%=Settings.site_url%>
+
+Turn these notifications off by updating your profile <%=edit_user_url(@user, :anchor => 'notifications')%>
