--- a/app/views/user_mailer/new_comment.html.haml
+++ b/app/views/user_mailer/new_comment.html.haml
@@ -15,5 +15,6 @@
       ="The #{Settings.site_name} team"
       %br
       =Settings.site_url
-    
-    
+    %p
+      Turn these notifications off by updating your
+      =link_to 'profile.', edit_user_url(@user, :anchor => 'notifications')
