--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -5,13 +5,7 @@
     %h1.page-title.mb-3.mt-0
       My groups
     .row
-      -@groups.each do |group|
-        =link_to(group, :class => "span3 group-tile") do
-          .inner.clearfix
-            .group-tile-image-wrap
-              =image_for(group, '190x130#')
-            %h4=group.name
-            
+      =render @groups
       =link_to(new_group_path, :class=>"span3 group-tile group-tile-new") do
         .inner.clearfix
           .group-tile-image-wrap
@@ -24,20 +18,10 @@
       %h1.page-title.mb-3.mt-0
         Invitations
       .row
-        -current_user.group_invitations.includes(:group).each do |invitation|
-          =link_to(invitation.group, :class => "span3 group-tile") do
-            .inner.clearfix
-              .group-tile-image-wrap
-                =image_for(invitation.group, '190x130#')
-              %h4=invitation.group
+        =render current_user.group_invitations.includes(:group).collect(&:group)
 .row.mb-2.mt-3
   .span12
     %h1.page-title.mb-3.mt-0
       Popular groups nearby        
     .row
-      -@popular_groups.each do |group|
-        =link_to(group, :class => "span3 group-tile") do
-          .inner.clearfix
-            .group-tile-image-wrap
-              =image_for(group, '190x130#')
-            %h4=group.name
+      =render @popular_groups
