--- a/app/views/modals/_register_popup.html.haml
+++ b/app/views/modals/_register_popup.html.haml
@@ -18,4 +18,4 @@
       Already registered? 
       =link_to "Log in here.", "/login", :id => "register-modal-login-link"
   .modal-footer
-    =link_to "Continue with easy registration", (current_page?(root_path) ? new_registration_path(:redirect_to_needs => 1) : new_registration_path), :class=>"btn btn-primary", :data_dismiss=>"modal", :id => "register-modal-register-link"
+    =link_to "Continue with easy registration", (current_page?(root_path) ? new_registration_path(:return_to => needs_path) : new_registration_path), :class=>"btn btn-primary", :data_dismiss=>"modal", :id => "register-modal-register-link"
