--- a/app/views/offers/index.html.haml
+++ b/app/views/offers/index.html.haml
@@ -32,6 +32,9 @@
                 %span.request-message-text=truncate(general_offer.description, :length => 200)
 
 .row
-  .span6.offset2                  
-    =link_to "Find someone who needs your help", new_general_offer_path, :class=>"btn call-to-action"
+  .span6.offset2
+    -if current_user.try(:group_user?)
+      =link_to "I'd like to offer some help", '#', :class=>"btn call-to-action group-user-registration-link", :data => {:return_to => new_general_offer_path}
+    -else
+      =link_to "Find someone who needs your help", new_general_offer_path, :class=>"btn call-to-action"
 
