--- a/app/views/groups/popular.html.haml
+++ b/app/views/groups/popular.html.haml
@@ -9,5 +9,6 @@
   .row
     =render @popular_groups
   .row
-    .span8
-      =will_paginate @popular_groups
+    .span12
+      .pull-right
+        =will_paginate @popular_groups
