List groups based on location on groups#index

--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -11,7 +11,8 @@
         =" - only invited members can access"
     =form.input :name, :label => 'Group name', :input_html => {:class => 'span6'}, :required => false
     =form.input :description, :label => 'Group bio', :required => false, :input_html => {:class => 'span6', :rows => 4}
-    =form.input :image, :label => 'Photo', :as => :image
+    =form.input :location, :required => false, :input_html => {:class => 'span6', :placeholder => 'e.g. Maltby, Sheffield'}
+    =form.input :image, :label => 'Photo', :as => :image, :input_html => {:class => 'mb-1'}, :wrapper_html => {:class => 'mb-2'}
     .clearfix
     =form.input :invitation_emails_s, :label => 'Invite members to this group?', :placeholder => 'Email addresses separated by a comma'
   =form.buttons do
