--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -22,7 +22,7 @@
 .row.mb-2.mt-3
   .span12
     %h1.page-title.mb-3.mt-0
-      Popular groups nearby
+      Groups nearby
     .row          
       =render @popular_groups
     -if @popular_groups.next_page
