--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,4 +1,9 @@
 .row
-  .span6.offset3
-    %h1.page-title Enter your group details
-    =render('groups/form')
+  .span10.offset1
+    -if current_user
+      %h1.page-title Enter your group details
+      =render('groups/form')
+    -else
+      %h1.page-title Enter your group and your own details
+      =render 'groups/group_and_user_form'
+
