--- a/app/views/user_mailer/new_flag.text.erb
+++ b/app/views/user_mailer/new_flag.text.erb
@@ -1,6 +1,6 @@
 Hi site admin,
 
-Someone has reported <%=@flag.resource_name%> as inappropriate: <%=polymorphic_url(@flag.resource)%>
+Someone has reported <%=@flag.resource_name%> as inappropriate: <%=@flag.resource_url%>
 
 View all inappropriate content here: <%=flags_url%>
 
