--- a/app/views/groups/_header.html.haml
+++ b/app/views/groups/_header.html.haml
@@ -6,8 +6,11 @@
     -if !@group.has_member?(current_user)
       -if @group_invitation && @group_invitation.user.nil?
         =link_to("Join this group", new_group_invitation_group_registration_path(@group_invitation), :class => 'btn btn-large btn-primary mt-2')
-      -else
+      -elsif current_user
         =link_to("Join this group", join_group_path(@group), :class => 'btn btn-large btn-primary mt-2')
+      -else
+        =link_to("Join this group", '#group-log-in-or-join', :'data-toggle' => 'modal', :class => 'btn btn-large btn-primary mt-2')
+        =render 'modals/group_log_in_or_join', :return_to => group_path(@group), :group_join_path => new_group_registration_path(:return_to =>  group_path(@group))
   .span5
     =image_for(@group, '370x250#')
 -if @group.has_member?(current_user)
