--- a/app/views/modals/_group_log_in_or_join.html.haml
+++ b/app/views/modals/_group_log_in_or_join.html.haml
@@ -5,7 +5,7 @@
     %h3
       Have you already got an account?
   .modal-body
-    %p="If you already have an account then #{link_to('log in here', sign_in_path(:return_to => return_to))}.".html_safe
+    %p="If you already have an account then #{link_to('log in here', sign_in_path(:next => return_to))}.".html_safe
     %p Otherwise click 'Next' to continue.
   .modal-footer
     =link_to "Next", group_join_path, :class => "cta-intro"
