--- a/app/views/groups/_header.html.haml
+++ b/app/views/groups/_header.html.haml
@@ -13,7 +13,7 @@
         =render 'modals/group_log_in_or_join', :return_to => join_group_path(@group), :group_join_path => new_group_registration_path(:return_to =>  group_path(@group))
   .span5
     =image_for(@group, '370x250#')
--if @group.has_member?(current_user)
+-if current_user.try(:admin?) || @group.has_member?(current_user)
   .row
     .span12
       %ul.nav.nav-tabs.group-nav-tabs.mb-3
