--- a/app/views/groups/_header.html.haml
+++ b/app/views/groups/_header.html.haml
@@ -13,6 +13,17 @@
         =render 'modals/group_log_in_or_join', :return_to => join_group_path(@group), :group_join_path => new_group_registration_path(:return_to =>  group_path(@group))
   .span5
     =image_for(@group, '370x250#')
+    -unless current_user.try(:admin?) || @group.has_member?(current_user)
+      -if @group.members.count > 0
+        %h3.mt-2.pull-left="This group has #{pluralize(@group.members.count, 'member')}"
+        .clearfix
+        %ul.thumbnails.mt-1
+          -@group.members.random(5).each do |user|
+            %li.span1
+              .list-image.thumbnail
+                =link_to(can?(:read, user) ? user : '#', :class => "pull-left") do
+                  =image_for_with_validation(user, "60x60#")
+                  %p.small-text=user
 -if current_user.try(:admin?) || @group.has_member?(current_user)
   .row
     .span12
