Change group label from 'Public' to 'Open'

--- a/app/views/groups/_group.html.haml
+++ b/app/views/groups/_group.html.haml
@@ -6,4 +6,4 @@
       =group.name
       -if current_user.try(:is_admin?)
         %span.pull-right.label{ :class => group.private? ? 'label-important' : 'label-success' }
-          =group.private? ? 'Private' : 'Public'
+          =group.private? ? 'Private' : 'Open'
