--- a/app/views/groups/_header.html.haml
+++ b/app/views/groups/_header.html.haml
@@ -11,6 +11,17 @@
       -else
         =link_to("Join this group", '#group-log-in-or-join', :'data-toggle' => 'modal', :class => 'btn btn-large btn-primary mt-2')
         =render 'modals/group_log_in_or_join', :return_to => join_group_path(@group), :group_join_path => new_group_registration_path(:return_to =>  group_path(@group))
+
+    .group-share.mt-3.mb-3
+      %br
+      =link_to "https://twitter.com/intent/tweet?url=#{url_encode(group_url(@group))}&text=#{url_encode("#{@group} - #{snippet_text(:twitter_share_group_text, "Spread the word and join this new group:")}")}", :class=>"share-btn twitter-share-btn btn mr-2", :target=>"_new" do
+        %i.icon-twitter
+        Share on Twitter
+
+      =link_to "https://www.facebook.com/dialog/feed?app_id=#{Settings.facebook_app_id}&description=#{url_encode("#{snippet_text(:facebook_share_group_text,"Spread the word and join this new group:")}")}&link=#{url_encode(request.url)}&name=#{url_encode("#{snippet_text(:facebook_share_group_title,"Spread the word and join this new group:")}")}&redirect_uri=#{url_encode(request.url)}", :class=>"share-btn facebook-share-btn btn", :target=>"_new" do
+        %i.icon-facebook
+        Share on Facebook
+
   .span5
     =image_for(@group, '370x250#')
     -unless current_user.try(:admin?) || @group.has_member?(current_user)
