Send emails when someone joins, posts or comments in a group

--- a/app/views/user_mailer/new_comment.html.haml
+++ b/app/views/user_mailer/new_comment.html.haml
@@ -8,7 +8,7 @@
       =@comment.user
       commented after you.
     %p
-      =link_to("View the comment.", need_url(@need))
+      =link_to("View the comment.", @resource_url)
     %p
       Thanks,
     %p
