--- a/app/views/user_mailer/new_comment.text.erb
+++ b/app/views/user_mailer/new_comment.text.erb
@@ -2,7 +2,7 @@ Hi <%=@user.first_name%>,
 
 Your neighbour <%=@comment.user%> commented after you.
 
-<%=need_url(@need)%>
+<%=@resource_url%>
 
 Thanks,
 
