Add snippet to preregistration modal

--- a/app/views/pre_registrations/_modals.html.haml
+++ b/app/views/pre_registrations/_modals.html.haml
@@ -6,6 +6,7 @@
       How would you like to get involved?
   .modal-body
     .center
+      =neighbourhood_snippet_text(:preregistration_intro, "Ask your neighbours for help, or help them out.")
       =link_to "I'd like some help", '#', :class => "btn call-to-action primary", :id => 'pre-register-need-link'
       =link_to "I'd like to offer some help", '#', :class => "btn call-to-action", :id => 'pre-register-general-offer-link'
   .modal-footer
