Move cycled_columns partial into views/home directory

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -36,4 +36,4 @@
           %span.badge#badge-groups-new NEW
 
 .container
-  =render('neighbourhoods/cycled_columns')
+  =render('home/cycled_columns')
