--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -23,56 +23,68 @@
           ="#{first_name_or_your(@user).capitalize} request to become a neighbourhood champion is being considered"
         -else
           ="There isn't a neighbourhood champion for #{first_name_or_your(@user)} area - #{link_to 'ask to become one', request_to_be_champion_user_path, :method => :put}".html_safe
-    -if @user.bio
-      =simple_format(@user.bio)
+    
+    .mt-2.mb-1  
+      -if current_user == @user
+        %h4 Bio
+      -if @user.bio.present?
+        =simple_format(@user.bio)
+      -elsif current_user == @user
+        %span.italic Nothing entered yet.
       .action-link
         =link_to("Edit", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
-    -else
-      %h4 Bio
-      .italic
-        %span Nothing entered yet.
+    .mb-1
+      -if @user.skills.present? || current_user == @user
+        %h4 Skills
+        -if @user.skills.present?
+          .skill-list
+            -@user.skills.each do |skill|
+              %span.label=skill.to_tag.to_s.humanize
+        -elsif current_user == @user
+          %span.italic Nothing entered yet.
         .action-link
           =link_to("Edit", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
+    
     -if current_user == @user
-      %p
+      .mb-1
         %h4 Date of birth
         =@user.dob.nil? ? 'Not set yet.' : @user.dob.to_s(:date)
         .action-link
           =link_to("Edit", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
-      %p
+      .mb-1
         %h4 Email
         =@user.email
-      %p
+      .mb-1
         %h4 Address
         =@user.address
         .action-link
           =link_to("Edit", edit_user_path(@user, :anchor => "where_you_live")) if can?(:edit, @user)
-      %p
+      .mb-1
         %h4 Phone number
         -if @user.phone.present?
           =@user.phone
         -else
-          .italic
-            %span Nothing entered yet.
+          %span.italic Nothing entered yet.
         .action-link
           =link_to("Edit", edit_user_path(@user, :anchor => "where_you_live")) if can?(:edit, @user)
-      %p
+      .mb-1
         %h4 Notifications
-        You do
-        ='not' if @user.no_notifications?
-        receive emails when people reply to your wants and offers of help.
-        %br
-        %br
-        =switch_text(@user).html_safe.sub('You can change these settings using the button.', '')
+        %p
+          You do
+          ='not' if @user.no_notifications?
+          receive emails when people reply to your requests and offers of help.
+        %p
+          =switch_text(@user).html_safe.sub('You can change these settings using the button.', '')
         .action-link
-          =link_to("Edit", edit_user_path(@user, :anchor => "notifications")) if can?(:edit, @user)
-      %h4.mb-1 Groups        
-      -@user.groups.each do |group|
-        =link_to(group, :class => "profile span3 group-tile") do
-          .inner.clearfix
-            .group-tile-image-wrap
-              =image_for(group, '190x130#')
-            %h4=group.name  
+          =link_to("Edit settings", edit_user_path(@user, :anchor => "notifications")) if can?(:edit, @user)
+          
+    %h4.mt-2.mb-1 Groups
+    -@user.groups.each do |group|
+      =link_to(group, :class => "profile span3 group-tile") do
+        .inner.clearfix
+          .group-tile-image-wrap
+            =image_for(group, '190x130#')
+          %h4=group.name
 
 .row.mt-2
   .span8
