Try to send email with link to finish group reg process

--- a/app/views/group_registrations/new.html.haml
+++ b/app/views/group_registrations/new.html.haml
@@ -15,6 +15,6 @@
         .register-tab-pane
           =render 'group_registrations/group_user_form', :form => form
         .form-actions
-          =form.submit("Register", :class => "btn btn-primary")
+          =form.submit("Register", :class => "btn btn-primary #{@already_pre_registered ? 'hide' : ''}")
 
 =render "modals/why_age"
