--- a/app/views/pre_registrations/modals/_general_offer.html.haml
+++ b/app/views/pre_registrations/modals/_general_offer.html.haml
@@ -8,7 +8,7 @@
       =f.inputs do
         =f.input :category, :value => general_offer.category.try(:id), :label => false, :prompt => 'Select a category', :input_html => {:class => 'span6'}
         =f.input :description, :label => false, :input_html => { :class => "span6", :rows => "2", :placeholder => "Describe how you can help"}, :required => false
-        =f.input :radius, :as => :select, :collection => need_radius_options, :include_blank => false, :label => false, :prompt => "Select a broadcast radius", :help => "People who live within this distance from you will hear about your offer", :input_html => {:class => "span6"}
+        =f.input :radius, :as => :select, :collection => need_radius_options, :include_blank => false, :label => false, :prompt => "Select a broadcast radius", :help => "Neighbours who live within this distance from you will hear about your offer", :input_html => {:class => "span6"}
     .modal-footer
       =link_to "Back", "#pre-register", :class=>"btn pull-left", :"data-toggle"=>"modal", :"data-dismiss"=>"modal"
       =f.commit_button "Next", :button_html => { :class => "btn btn-primary pull-right" }
