--- a/app/views/pre_registrations/modals/_need.html.haml
+++ b/app/views/pre_registrations/modals/_need.html.haml
@@ -11,7 +11,7 @@
       =f.inputs do
         =f.input :category, :value => need.category.try(:id), :label => false, :prompt => 'Select a category', :input_html => {:class => 'span6'}
         =f.input :description, :label => false, :help => "Describe what you need help with. Be sure to include when you need the help and how flexible you can be.", :input_html => { :class => "span6", :rows => "2", :placeholder => 'Describe what you need help with'}, :required => false
-        =f.input :radius, :as => :select, :collection => need_radius_options, :include_blank => false, :label => false, :prompt => "Select the broadcast radius", :help => "People who live within this distance from you will hear about your need", :input_html => {:class => "span6"}
+        =f.input :radius, :as => :select, :collection => need_radius_options, :include_blank => false, :label => false, :prompt => "Select the broadcast radius", :help => "Neighbours who live within this distance from you will hear about your need", :input_html => {:class => "span6"}
         =f.input :need_to_know_by, :as => :radio, :collection => [["Any time","anytime"],["As soon as possible","asap"], ["A specific date", "date"]], :label => "I need to know by", :help => "When would you like to know if anybody can help you?", :wrapper_html => {:id => 'need_need_to_know_by_input'}
         #need_deadline_input.control-group{:class => "#{need.errors[:deadline].present? ? 'error' : ''}"}
           .controls
